# Rust

./: Cargo.toml  README.md
api-practice/: Cargo.toml
api-practice/src/: main.rs  studentData.json
api-practice/src/configration/: mod.rs  settings.rs
api-practice/src/routes/: mod.rs
api-practice/src/student/: mod.rs  student_model.rs  student_service.rs  student_structure.rs
src/: main.rs
src/levels/: _level1.rs  _level2.rs  _level3.rs  _level4.rs  _level5.rs  mod.rs
