[package]
name = "api-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["multipart"] }
tokio = { version = "1.33.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
config = "0.13.2"   #for config
lazy_static = "1.4"  #static declaration
